--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.php linguist-detectable=true  
+*.PHP linguist-detectable=true  
 *.css linguist-detectable=false  
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
