--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-*.PHP linguist-detectable=true  
-*.css linguist-detectable=false  
+*.php linguist-detectable=true  
+*.java linguist-detectable=false  
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
+*.xml linguist-detectable=false  
