--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 *.php linguist-detectable=true  
 *.css linguist-detectable=false  
+*.SCSS linguist-detectable=false 
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
-*.SCSS linguist-detectable=false  
+*.xml linguist-detectable=false  
+ 
 
