--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 *.php linguist-detectable=true  
 *.css linguist-detectable=false  
-*.SCSS linguist-detectable=false 
+*.scss linguist-detectable=false 
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
 *.xml linguist-detectable=false  
